--- a/web/src/global.css
+++ b/web/src/global.css
@@ -51,3 +51,22 @@ form input {
 .button:hover {
   filter: brightness(90%);
 }
+
+.back-link {
+  display: flex;
+  align-items: center;
+  margin-top: 40px;
+  color: #41414d;
+  font-size: 18px;
+  font-weight: 500;
+  text-decoration: none;
+  transition: opacity 0.2s;
+}
+
+.back-link:hover {
+  opacity: 0.8;
+}
+
+.back-link svg {
+  margin-right: 8px;
+}
